Adicionando footer da aplicação

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -9,6 +9,10 @@
   white-space: inherit !important;
 }
 
+body {
+  font-family: 'poppins';
+}
+
 .p-tooltip {
   position: absolute;
   padding: 0.25em 0.5rem;
